# GRwHS

./: .gitignore  .pre-commit-config.yaml  .tmp_gigg_diag.py  .tmp_run_exp3_gigg_mmle.py  GR_RHS_simulation.ipynb  LICENSE  README.md  conftest.py  package-lock.json  patch.diff  patch.txt  pyproject.toml  random_sweep_selector.py  scenario_mixed.yaml  scripts.py  tmp_gigg_conv_search.py  tmp_hs.npz
PhD Position Application/: Presentation for phd interview.pptx  Uncertainty Quantification.pptx
Simulation_highdimension/: README.md  __init__.py
ab_runs/: _tmp_GIGG_pdf_extract.txt  _tmp_run_exp3_gigg_mmle_tuned.py  _tmp_run_exp3_gigg_mmle_tuned2.py  _tmp_run_exp3_gigg_mmle_tuned3.py  _tmp_run_exp3_gigg_mmle_tuned4.py  _tmp_run_exp3_grrhs_new.py  _tmp_run_exp4_full_parallel_20260421_153213.py  _tmp_run_exp4_full_spawnsafe_20260421_153538.py  exp3_gigg_mmle_tuning_compare.csv  gigg_paper_extracted.txt
configs/: base.yaml  grrhs_sixway_candidates_strong.json  grrhs_sixway_candidates_topup.json  scenario_A.yaml  scenario_A_seeded.yaml  scenario_B.yaml  scenario_B_classification.yaml  scenario_B_refined.yaml  scenario_C.yaml  scenario_D.yaml  test.yaml
data/: __init__.py  generators.py  loaders.py  preprocess.py  splits.py
docs/: bayesian_four_models_priors_posteriors_sampling_convergence.md  fair_benchmark_protocol.md  gigg_cran_python_port.md  grrhs_advantage_regions.md  grrhs_benchmark_blueprint.md  grrhs_mechanism_experiment_design.md  grrhs_simulation_experiment_report.tex  grrhs_validation_experiment_framework.md  highdim_bayesian_all4_light_performance_comparison.md  highdim_bayesian_all4_unified_summary.md  highdim_bayesian_isolated_formal_r1_r2_stability_summary.md  highdim_bayesian_isolated_formal_r1_summary.md  real_data_dataset_execution_plan.md  real_data_execution_prompts.md  simulation_cli_guide.md  simulation_project_0415_protocol.md  thesis_figure_plan.md
gigg/: DESCRIPTION  INDEX
grrhs/: __init__.py
grwhs/: __init__.py
tmp/: b.py  (+16 more)
(+1208 files in other folders)
